Refactor technical debt documentation for Seasar2 modernization
- Updated title to reflect the modernized fork of Seasar2.
- Enhanced Issue 1 description to clarify the transition from reflection to MethodHandles.Lookup for class definition.
- Improved clarity on affected files and proposed solutions, including fallback for JDK 8.
- Revised benefits and challenges sections for better readability and emphasis on security improvements.
- Updated Issue 2 to focus on migrating from javax.* to jakarta.* namespace for Servlet container compatibility, detailing phases and challenges.
- Added acceptance criteria and estimated effort for both issues, ensuring clear tracking of progress.